<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="article">文章</string>
    <string name="forum">论坛</string>
    <string name="game">游戏</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="contemt">文章内容</string>
    <string name="refresh">刷新</string>
    <string name="comment">评论</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="search">按类型查询</string>
    <string name="sort">游戏总分类</string>
    <string name="title_activity_game_detail">GameDetailActivity</string>

</resources>
